manifests/retrieve/retrieve-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: retrieve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retrieve
  template:
    metadata:
      labels: 
        app: retrieve
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-retrieve
        image:  rs/retrieve:latest
        ports:
          - name: http
            containerPort: 5600
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
